# OmniSkill

./: .gitignore  AGENT_SKILLS_HANDOVER.md  LICENSE  PROGRESS_DASHBOARD.md  README.md  status.json
ingester/: ingester.py  sources.yaml
skills/community/0codekit/: skill.json
skills/community/accessibility/: SKILL.md  skill.json
skills/community/webact/: .gitignore  AGENTS.md  Cargo.toml  MCP_INSTRUCTIONS.md  README.md  SKILL.md  build.rs  skill.json  tools.json
skills/community/webact/.claude-plugin/: marketplace.json  plugin.json
skills/community/webact/context/: feedback-db.md  www-vercel.md
skills/community/webact/native/macos-automation/: Package.swift
skills/community/webact/native/macos-automation/Sources/WebActMacOSBridge/: AXQuery.swift  AXTree.swift  AppManager.swift  CStrings.swift  ClickActions.swift  Exports.swift  Models.swift  WindowManager.swift
skills/community/webact/native/macos-automation/include/: webact_macos.h
skills/community/webact/src/: api_client.rs  bus.rs  config.rs  ipc.rs  lib.rs  mcp.rs  scripts.rs
skills/community/webact/src/commands/: batch.rs  core.rs  desktop.rs  mod.rs  monitor.rs  session.rs
skills/community/webact/src/commands/interaction/: forms.rs
skills/community/webact/src/desktop/: mod.rs  native.rs
skills/community/webact/www/: package.json  vercel.json
skills/community/webact/www/api/: script.js
skills/community/webact/www/api/download/: [...path].js
skills/community/webact/www/api/v1/: version.js
skills/community/webact/www/public/: index.html
templates/: standardization_guide.md
(+648 files in other folders)
