[package]
name = "webact"
version = "0.4.13"
edition = "2024"
build = "build.rs"

[[bin]]
name = "webact"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"

[dependencies]
anyhow = "1.0"
dirs = "6"
base64 = "0.22"
futures-util = "0.3"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["rt-multi-thread", "net", "io-util", "io-std", "time", "sync", "macros"] }
tokio-tungstenite = "0.28"
flate2 = "1.1"
tar = "0.4"
urlencoding = "2"
socket2 = "0.6.3"
fs2 = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "1.5", features = ["async"] }
enigo = "0.6"
libc = "0.2"

[target.'cfg(target_os = "macos")'.build-dependencies]
swift-rs = { version = "1.0", features = ["build"] }
